hphp/hack/test/typecheck/shape/key_exists_refines_bad1.php.exp
ERROR: File "key_exists_refines_bad1.php", line 7, characters 19-25:
Invalid argument (Typing[4110])
  File "key_exists_refines_bad1.php", line 3, characters 24-29:
  Expected `string`
  File "key_exists_refines_bad1.php", line 7, characters 19-25:
  But got `int`
  File "key_exists_refines_bad1.php", line 5, characters 29-31:
    from this definition
